--- a/app/views/customer/order_forms/_nursery.html.erb
+++ b/app/views/customer/order_forms/_nursery.html.erb
@@ -46,16 +46,10 @@
     <%= f.email_field :email, class: "form-control" %>
   </div>
 </div>
-
 <div class="form-group">
-  <%= f.label :sb_no, class: "col-sm-2" %>
-  <div class="col-sm-3">
-    <%= f.text_field :sb_no, class: "form-control" %>
-  </div>
-
   <%= f.label :pon, class: "col-sm-2" %>
-  <div class="col-sm-3">
-    <%= f.text_field :pon, class: "form-control" %>
+  <div class="col-sm-8">
+    <%= f.email_field :pon, class: "form-control" %>
   </div>
 </div>
 
