--- a/app/views/admin/lot_numbers/index.html.erb
+++ b/app/views/admin/lot_numbers/index.html.erb
@@ -13,6 +13,7 @@
     <th><%= "Lot Number" %></th>
     <th><%= "SPA Name" %></th>
     <th><%= model_class.human_attribute_name(:region) %></th>
+    <th><%= model_class.human_attribute_name(:spa_name) %></th>
     <th><%= model_class.human_attribute_name(:provenance) %></th>
     <th><%= model_class.human_attribute_name(:location) %></th>
     <th><%= t '.actions', :default => t("helpers.actions") %></th>
@@ -22,6 +23,7 @@
   <% @lot_numbers.each do |lot_number| %>
       <tr>
         <td><%= lot_number.number %></td>
+        <td><%= (lot_number.spa_name.blank? ? "NA" : lot_number.spa_name) %></td>
         <td><%= lot_number.heritage_lot_numbers %></td>
         <td><%= lot_number.region %></td>
         <td><%= lot_number.provenance %></td>
