--- a/app/views/layouts/v2/_navbar.html.erb
+++ b/app/views/layouts/v2/_navbar.html.erb
@@ -58,14 +58,16 @@
         <!-- /Nav Buttons -->
         <!-- Links -->
         <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogues
-              <i class="fa fa-angle-down parent-symbol"></i></a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "General", catalogue_general_path %></li>
-              <li><%= link_to "SPA", catalogue_spa_path %></li>
-            </ul>
-          </li>
+          <li><%= link_to "Catalogue", catalogue_general_path %></li>
+
+          <!--<li class="dropdown">-->
+            <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">Catalogues-->
+              <!--<i class="fa fa-angle-down parent-symbol"></i></a>-->
+            <!--<ul class="dropdown-menu">-->
+              <!--<li><%= link_to "General", catalogue_general_path %></li>-->
+              <!--<li><%= link_to "SPA", catalogue_spa_path %></li>-->
+            <!--</ul>-->
+          <!--</li>-->
           <% Cms::Site.first.pages.root.children.published.each do |page| %>
               <% if page.children.present? %>
                   <li class="dropdown">
