--- a/app/views/shared/order_forms/_nursery.html.erb
+++ b/app/views/shared/order_forms/_nursery.html.erb
@@ -5,7 +5,7 @@
 
   <tr>
     <th colspan="2">Date</th>
-    <td colspan="2"><%= format_date_with_time order_form.created_at %></td>
+    <td colspan="2"><%= format_date order_form.created_at %></td>
   </tr>
 
   <tr>
