--- a/app/views/admin/deposits/_form.html.erb
+++ b/app/views/admin/deposits/_form.html.erb
@@ -9,13 +9,18 @@
     <div class="control-group">
       <%= f.label :lot_number_id, :class => 'control-label' %>
       <div class="controls">
-        <%= f.select :lot_number_id, LotNumber.all.collect { |l| [l.display, l.id] } %>
+        <%= f.select :lot_number_id, LotNumber.order("number asc").collect { |l| [l.display, l.id, {"data-content" => [l.region, l.provenance, l.location, l.spa_name].delete_if {|c| c.blank?}.join(', '),
+                                                                                                    "data-provenance" => l.provenance,
+                                                                                                    "data-location" => l.location,
+                                                                                                    "data-spa-name" => l.spa_name}] }, {}, class: "content_select", "data-target" => "#lot_number_details" %>
+        <div id="lot_number_details"></div>
       </div>
     </div>
     <div class="control-group">
       <%= f.label :plant_id, :class => 'control-label' %>
       <div class="controls">
-        <%= f.select :plant_id, Plant.all.collect { |l| [l.common_name, l.id] } %>
+        <%= f.select :plant_id, Plant.order("species asc").collect { |p| [p.species, p.id, {'data-content' => p.common_name}] }, {}, class: "content_select","data-target" => "#plant_details" %>
+        <div id="plant_details"></div>
       </div>
     </div>
     <div class="control-group">
@@ -37,3 +42,8 @@
                   admin_deposits_path, :class => 'btn' %>
     </div>
 <% end %>
+<script>
+    $(".content_select").on('change',function () {
+        $($(this).data('target')).html($(this).find("option:selected").data("content"))
+    }).trigger('change');
+</script>
