--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,7 +1,7 @@
 <%- model_class = Order -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
-  <%= render partial: "shared/advanced_search" %>
+  <%= render partial: "shared/advanced_search", locals: {name: "state_or_number_or_customer_first_name_or_customer_last_name_cont", html_options: {placeholder: "Search..."}} %>
 </div>
 <table class="table table-striped">
   <thead>
@@ -20,8 +20,8 @@
         <td><%= order.state %></td>
         <td><%= order.number %></td>
         <td><%= order.customer.try(:full_name) %></td>
-        <td><%= order.completed_at %></td>
-        <td><%=l order.created_at %></td>
+        <td><%= format_date(order.completed_at) || "-" %></td>
+        <td><%= format_date order.created_at %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
                       edit_admin_order_path(order), :class => 'btn btn-mini btn-primary' %>
