--- a/app/views/admin/people/_form.html.erb
+++ b/app/views/admin/people/_form.html.erb
@@ -53,6 +53,7 @@
       </div>
     </div>
 
+    <%= hidden_field_tag :type_cont, (params[:q][:type_cont] rescue "") %>
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
