--- a/app/views/admin/people/edit.html.erb
+++ b/app/views/admin/people/edit.html.erb
@@ -1,7 +1,6 @@
-<%- model_class = Person -%>
 <div class="page-header">
-  <h1><%= t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1><%= "Edit #{@type}" %></h1>
 </div>
-<%= form_for [:admin, @person], url: admin_person_path, :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for [:admin, @object], url: admin_person_path, :html => {:class => 'form-horizontal'} do |f| %>
     <%= render :partial => 'form', locals: {f: f} %>
 <% end %>
