--- a/app/views/admin/people/index.html.erb
+++ b/app/views/admin/people/index.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = Person -%>
 <div class="page-header">
-  <h1><%= params[:q][:type_cont] + "s" rescue "People" %></h1>
+  <h1><%= @type + "s" rescue "People" %></h1>
 
   <%= link_to t('.new', :default => t("helpers.links.new")),
               new_admin_person_path,
@@ -34,9 +34,9 @@
         <td><%= person.phone %></td>
         <td>
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_admin_person_path(person), :class => 'btn btn-mini btn-primary' %>
+                      edit_admin_person_path(person, q: {type_cont: (params[:q][:type_cont] rescue "")}), :class => 'btn btn-mini btn-primary' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      admin_person_path(person),
+                      admin_person_path(person, q: {type_cont: (params[:q][:type_cont] rescue "")}),
                       :method => :delete,
                       :data => {:confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?'))},
                       :class => 'btn btn-mini btn-danger' %>
