--- a/app/views/admin/people/new.html.erb
+++ b/app/views/admin/people/new.html.erb
@@ -1,9 +1,9 @@
 <%- model_class = Person -%>
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1><%= "New #{@type}" %></h1>
 </div>
 
-<%= form_for [:admin, @person], :html => {:class => 'form-horizontal'} do |f| %>
+<%= form_for [:admin, @object], url: admin_people_path, :html => {:class => 'form-horizontal'} do |f| %>
     <%= render :partial => 'form', locals: {f: f} %>
 <% end %>
 
