--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,8 +1,13 @@
 <%- model_class = Order -%>
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human.pluralize.titleize %></h1>
+
+  <%= link_to t('.new', :default => t("helpers.links.new")),
+              new_admin_order_path,
+              :class => 'btn btn-primary pull-right' %>
   <%= render partial: "shared/advanced_search", locals: {name: "state_or_number_or_customer_full_name_cont", html_options: {placeholder: "Search..."}} %>
 </div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -35,7 +40,3 @@
     <% end %>
   </tbody>
 </table>
-
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_admin_order_path,
-            :class => 'btn btn-primary' %>
