--- a/app/views/admin/lot_numbers/index.html.erb
+++ b/app/views/admin/lot_numbers/index.html.erb
@@ -4,8 +4,12 @@
   <%= link_to t('.new', :default => t("helpers.links.new")),
               new_admin_lot_number_path,
               :class => 'btn btn-primary pull-right' %>
-  <div class="clearfix"></div>
-  <%= render partial: "shared/advanced_search", locals: {name: "region_or_spa_name_or_location_or_provenance_or_number_cont", html_options: {placeholder: "Search..."}} %>
+  <%= search_form_for [:admin, @search] do |f| %>
+      <%= f.text_field "number_eq", placeholder: "Number" %> and
+      <%= f.text_field "region_or_spa_name_or_location_or_provenance_cont", placeholder: "Region, SPA name etc." %>
+      <%= (f.hidden_field :type_cont) rescue "" %>
+      <%= f.submit "Search", class: "btn btn-small" %>
+  <% end %>
 </div>
 <table class="table table-striped">
   <thead>
