Adds extra spa_sec and dseedable fields and form attributes

--- a/app/views/admin/lot_numbers/_form.html.erb
+++ b/app/views/admin/lot_numbers/_form.html.erb
@@ -47,6 +47,20 @@
       </div>
     </div>
 
+
+    <div class="control-group">
+      <%= f.label :spa_specific, :class => 'control-label' %>
+      <div class="controls">
+        <label>
+          <%= f.radio_button :spa_specific, true %>  Yes
+        </label>
+
+        <label>
+          <%= f.radio_button :spa_specific, false %> No
+        </label>
+      </div>
+    </div>
+
     <br>
 
     <div class="form-actions">
