--- a/app/views/admin/plants/_form.html.erb
+++ b/app/views/admin/plants/_form.html.erb
@@ -1,32 +1,46 @@
-<%= form_for [:admin, @plant], :html => { :class => 'form-horizontal' } do |f| %>
-  <div class="control-group">
-    <%= f.label :species, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :species, :class => 'text_field' %>
+<%= form_for [:admin, @plant], :html => {:class => 'form-horizontal'} do |f| %>
+    <div class="control-group">
+      <%= f.label :species, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :species, :class => 'text_field' %>
+      </div>
     </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :common_name, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :common_name, :class => 'text_field' %>
+    <div class="control-group">
+      <%= f.label :common_name, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :common_name, :class => 'text_field' %>
+      </div>
     </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :price_paid, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :price_paid, :class => 'text_field' %>
+    <div class="control-group">
+      <%= f.label :price_paid, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :price_paid, :class => 'text_field' %>
+      </div>
     </div>
-  </div>
-  <div class="control-group">
-    <%= f.label :price_charged, :class => 'control-label' %>
-    <div class="controls">
-      <%= f.text_field :price_charged, :class => 'text_field' %>
+    <div class="control-group">
+      <%= f.label :price_charged, :class => 'control-label' %>
+      <div class="controls">
+        <%= f.text_field :price_charged, :class => 'text_field' %>
+      </div>
     </div>
-  </div>
 
-  <div class="form-actions">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
-                admin_plants_path, :class => 'btn' %>
-  </div>
+    <div class="control-group">
+      <%= f.label :direct_seedable, :class => 'control-label' %>
+      <div class="controls">
+        <label>
+          <%= f.radio_button :direct_seedable, true %>  Yes
+        </label>
+
+        <label>
+          <%= f.radio_button :direct_seedable, false %> No
+        </label>
+      </div>
+    </div>
+
+
+    <div class="form-actions">
+      <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
+                  admin_plants_path, :class => 'btn' %>
+    </div>
 <% end %>
