Adds auto session timeout

--- a/app/assets/stylesheets/v2/default.css
+++ b/app/assets/stylesheets/v2/default.css
@@ -1402,6 +1402,19 @@ ul.side-links > li > .toggle-children.open:before {
   border-radius: 0;
 }
 
+#main-nav.navbar-default .navbar-nav>li>span.email {
+    color: #2c3e50;
+    padding: 0 20px;
+    font: normal 14px "Roboto Condensed";
+    line-height: 85px;
+    margin: 0px 0;
+    display: block;
+}
+#main-nav.navbar-default .navbar-nav>li>span.email>span {
+    color:blue;
+}
+
+
 #main-nav.navbar-default {
   position: relative;
   background: none;
@@ -1434,10 +1447,11 @@ ul.side-links > li > .toggle-children.open:before {
 #main-nav.navbar-default .navbar-brand {
     background-image: url(/assets/v2/logo.png);
     background-size: auto;
+    background-position: center;
     background-repeat: no-repeat;
     display: inline-block;
     height: 85px;
-    width: 182px;
+    width: 100px;
 }
 #main-nav.navbar-default .navbar-brand h1 {
   padding: 0;
