--- a/app/views/customer/order_forms/profile.html.erb
+++ b/app/views/customer/order_forms/profile.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @person, url: customer_save_profile_path, method: :put, validate: true do |f| %>
-
+    <%= hidden_field_tag :return_to, params[:return_to] %>
     <div class="control-group">
       <%= f.label :first_name, :class => 'control-label' %>
       <div class="controls">
