--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -2,6 +2,7 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Management
     <i class="fa fa-angle-down parent-symbol"></i></a>
   <ul class="dropdown-menu">
+    <li><%= link_to "Catalogues", catalogue_general_path %></li>
     <li><%= link_to "Plants", admin_plants_path %></li>
     <li><%= link_to "Lot Numbers", admin_lot_numbers_path %></li>
     <li><%= link_to "Orders", admin_orders_path %></li>
