--- a/app/views/customer/order_forms/_items.html.erb
+++ b/app/views/customer/order_forms/_items.html.erb
@@ -6,6 +6,7 @@
     <th>Heritage Lot No</th>
     <th>Botanical Name</th>
     <th>Provenance</th>
+    <th>Region</th>
     <th>Select</th>
   </tr>
   </thead>
@@ -17,6 +18,7 @@
         <td><%= deposit.lot_number.heritage_lot_numbers %></td>
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.lot_number.provenance %></td>
+        <td><%= deposit.lot_number.region %></td>
         <td class="col-sm-5">
           <div class="col-sm-2">
             <%= check_box_tag "select", "", false, class: "order_item_check" %>
