--- a/app/views/home/catalogue_general.html.erb
+++ b/app/views/home/catalogue_general.html.erb
@@ -10,8 +10,8 @@
 <table class="table table-bordered">
   <thead>
   <tr class="bold-black">
-    <th colspan="2">SEED CATALOGUE</th>
-    <th colspan="4">SPA - Seed Production Area</th>
+    <th>SEED CATALOGUE</th>
+    <th colspan="5">SPA - Seed Production Area</th>
     <th class="align-right">g</th>
     <th>1-49g</th>
     <th>50-499g</th>
@@ -19,11 +19,12 @@
   </tr>
 
   <tr class="bold-black">
-    <th colspan="2">Lot No</th>
+    <th>Lot No</th>
     <th>Spa Name</th>
     <th>Botanical Name</th>
     <th>Common Name</th>
     <th>Provenance</th>
+    <th>Region</th>
     <th>Qty</th>
     <th>$/kg</th>
     <th>$/kg</th>
@@ -34,11 +35,12 @@
   <tbody>
   <% @deposits.all.each do |deposit| %>
       <tr>
-        <td colspan="2"><%= deposit.display %></td>
+        <td><%= deposit.display %></td>
         <td><%= (deposit.lot_number.spa_name.blank? ? "NA" : deposit.lot_number.spa_name) %></td>
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.plant.common_name %></td>
         <td><%= deposit.lot_number.provenance %></td>
+        <td><%= deposit.lot_number.region %></td>
         <td><%= deposit.qty_bank %></td>
         <td><%= number_to_currency deposit.plant.level_1_price %></td>
         <td><%= number_to_currency deposit.plant.level_2_price %></td>
