--- a/app/views/home/catalogue_spa.html.erb
+++ b/app/views/home/catalogue_spa.html.erb
@@ -12,9 +12,7 @@
   <thead>
   <tr class="bold-black">
     <th colspan="2">SEED CATALOGUE</th>
-    <th>SPA - Seed Production Area</th>
-    <th></th>
-    <th class="align-right">g</th>
+    <th colspan="5">SPA - Seed Production Area</th>
     <th>1-49g</th>
     <th>50-499g</th>
     <th> >500</th>
@@ -26,6 +24,7 @@
     <th>Botanical Name</th>
     <th>Common Name</th>
     <th>Provenance</th>
+    <th>Region</th>
     <th>Qty</th>
     <th>$/kg</th>
     <th>$/kg</th>
@@ -41,6 +40,7 @@
         <td><%= deposit.plant.species %></td>
         <td><%= deposit.plant.common_name %></td>
         <td><%= deposit.lot_number.provenance %></td>
+        <td><%= deposit.lot_number.region %></td>
         <td><%= deposit.qty_bank %></td>
         <td><%= number_to_currency deposit.plant.level_1_price %></td>
         <td><%= number_to_currency deposit.plant.level_2_price %></td>
