--- a/app/views/home/catalogue_spa.html.erb
+++ b/app/views/home/catalogue_spa.html.erb
@@ -1,6 +1,6 @@
 <%= content_for :page_title, "SPA Catalogue" %>
 <%= content_for :page_link do %>
-    <%= link_to "New Order", "#selectModal", "data-toggle" => "modal", class: "btn btn-success" %>
+    <%= link_to "Place an order", "#selectModal", "data-toggle" => "modal", class: "btn btn-success" %>
 <% end %>
 <%= render partial: "shared/selection_modal" %>
 
