--- a/app/views/admin/people/_form.html.erb
+++ b/app/views/admin/people/_form.html.erb
@@ -46,14 +46,14 @@
         <%= f.text_field :phone, :class => 'text_field' %>
       </div>
     </div>
-    <div class="control-group">
+    <div class="control-group hide">
       <%= f.label :type, :class => 'control-label' %>
       <div class="controls">
         <%= f.select :type, [["Customer", "Person::Customer"], ["Collector", "Person::Collector"]] %>
       </div>
     </div>
 
-    <%= hidden_field_tag :type_cont, (params[:q][:type_cont] rescue "") %>
+    <%= hidden_field_tag :type, (params[:q][:type_cont] rescue "") %>   <br>
     <div class="form-actions">
       <%= f.submit nil, :class => 'btn btn-primary' %>
       <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
