--- a/app/views/admin/people/index.html.erb
+++ b/app/views/admin/people/index.html.erb
@@ -3,7 +3,7 @@
   <h1><%= @type + "s" rescue "People" %></h1>
 
   <%= link_to t('.new', :default => t("helpers.links.new")),
-              new_admin_person_path,
+              new_admin_person_path(type: @type),
               :class => 'btn btn-primary pull-right' %>
   <%= render partial: "shared/advanced_search", locals: {name: "full_name_cont", html_options: {placeholder: "Search..."}} %>
 </div>
