--- a/app/views/admin/orders/_customer_data.html.erb
+++ b/app/views/admin/orders/_customer_data.html.erb
@@ -74,7 +74,7 @@
         <div class="field">
           <%= c.label :email %>
           <br/>
-          <%= c.text_field :email, placeholder: "Can be empty" %>
+          <%= c.text_field :email, placeholder: "can be empty" %>
         </div>
 
     <% end %>
