--- a/app/views/home/_table_header.html.erb
+++ b/app/views/home/_table_header.html.erb
@@ -42,7 +42,7 @@
   </tr>
 
   <tr>
-    <th colspan="4">Go to 'www.gbcma.vic.gov.au/revegetetion' for region maps</th>
+    <th colspan="4">Go to 'www.gbcma.vic.gov.au/revegetation' for region maps</th>
     <th></th>
     <th></th>
     <th></th>
@@ -82,7 +82,7 @@
   </tr>
 
   <tr>
-    <th class="bold-black" colspan="2">Prices do not include G S T</th>
+    <th class="bold-black" colspan="2">Prices include G S T - Direct Seeding $715 / Kg</th>
     <th></th>
     <th></th>
     <th></th>
