--- a/app/views/customer/order_forms/_seeding.html.erb
+++ b/app/views/customer/order_forms/_seeding.html.erb
@@ -83,7 +83,7 @@
 
 <hr>
 <div class="col-sm-10">
-  <%= render partial: "items", locals: {grams: false} %>
+  <%= render partial: "items", locals: {grams: false, nursery: false} %>
 </div>
 
 
