adds other catalogue types

--- a/app/views/customer/order_forms/_nursery.html.erb
+++ b/app/views/customer/order_forms/_nursery.html.erb
@@ -65,7 +65,7 @@
 
 <hr>
 <div class="col-sm-10">
-  <%= render partial: "items", locals: {grams: true, nursery: true} %>
+  <%= render partial: "items_for_nursery", locals: {grams: true} %>
 </div>
 
 
