--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,24 +1,1 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {:autocomplete => "off"}) do |f| %>
-    <%= devise_error_messages! %>
-
-    <div><%= f.label :email %>
-      <br/>
-      <%= f.hidden_field :email %>
-      <%= f.email_field :email, autofocus: true, :autocomplete => 'off' %></div>
-
-    <div><%= f.label :password %>
-      <br/>
-      <%= f.hidden_field :password %>
-      <%= f.password_field :password, autocomplete: "off" %></div>
-
-    <div><%= f.label :password_confirmation %>
-      <br/>
-      <%= f.hidden_field :password_confirmation %>
-      <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
-
-    <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<%= render template: "devise/sessions/new" %>
