--- a/app/views/customer/order_forms/_items_for_nursery.html.erb
+++ b/app/views/customer/order_forms/_items_for_nursery.html.erb
@@ -3,8 +3,8 @@
 
   <tr>
     <th>Lot No</th>
-    <th>Heritage Lot No</th>
     <th>Botanical Name</th>
+    <th>Common Name</th>
     <th>Provenance</th>
     <th>Region</th>
     <th>Select</th>
@@ -15,8 +15,8 @@
   <% @deposits.each do |deposit| %>
       <tr>
         <td><%= deposit.display %></td>
-        <td><%= deposit.lot_number.heritage_lot_numbers %></td>
         <td><%= deposit.plant.species %></td>
+        <td><%= deposit.plant.common_name %></td>
         <td><%= deposit.lot_number.provenance %></td>
         <td><%= deposit.lot_number.region %></td>
         <td class="col-sm-5">
