--- a/app/views/layouts/v2/admin/_navbar.html.erb
+++ b/app/views/layouts/v2/admin/_navbar.html.erb
@@ -2,7 +2,20 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Management
     <i class="fa fa-angle-down parent-symbol"></i></a>
   <ul class="dropdown-menu">
-    <li><%= link_to "Catalogues", catalogue_general_path %></li>
+
+    <li class="dropdown-submenu">
+      <a href="#">
+        <i class="fa fa-angle-left parent-symbol" style="font-weight: bold;"></i>
+        Catalogues
+      </a>
+      <ul class="dropdown-menu dropdown-menu-right">
+        <li><%= link_to "Public", catalogue_general_path %></li>
+        <li><%= link_to "SPA", catalogue_spa_path %></li>
+        <li><%= link_to "Direct Seeding", catalogue_seeding_path %></li>
+        <li><%= link_to "Nursery", catalogue_nursery_path %></li>
+      </ul>
+    </li>
+
     <li><%= link_to "Plants", admin_plants_path %></li>
     <li><%= link_to "Lot Numbers", admin_lot_numbers_path %></li>
     <li><%= link_to "Orders", admin_orders_path %></li>
