--- a/app/views/customer/order_forms/_items_for_nursery.html.erb
+++ b/app/views/customer/order_forms/_items_for_nursery.html.erb
@@ -25,6 +25,7 @@
           </div>
           <div class="col-sm-10" style="display: none;">
             <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][deposit_id]", deposit.id, disabled: true %>
+            <%= hidden_field_tag "order_form[order_form_items_attributes][#{deposit.id}][plant_id]", deposit.plant_id, disabled: true %>
             <% if grams %>
                 <%= label_tag "Grams", "Grams", class: "col-sm-4" %>
                 <div class="col-sm-8">
