Fixes after login path

--- a/app/views/customer/orders/show.html.erb
+++ b/app/views/customer/orders/show.html.erb
@@ -12,7 +12,7 @@
     <th>Lot No</th>
     <th>Botanical Name</th>
     <th>Provenance</th>
-    <th>Qty</th>
+    <th>Qty (g)</th>
     <th>Price</th>
   </tr>
   </thead>
