--- a/app/views/customer/order_forms/profile.html.erb
+++ b/app/views/customer/order_forms/profile.html.erb
@@ -39,7 +39,7 @@
     <div class="control-group">
       <%= f.label :email, :class => 'control-label' %>
       <div class="controls">
-        <%= f.text_field :email, :class => 'text_field' %>
+        <%= f.text_field :email, :class => 'text_field', placeholder: "can be blank" %>
       </div>
     </div>
     <div class="control-group">
