--- a/app/views/home/catalogue_seeding.html.erb
+++ b/app/views/home/catalogue_seeding.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :page_title, "Public Catalogue" %>
+<%= content_for :page_title, "Direct Seeding Catalogue" %>
 <%= content_for :page_link do %>
     <%= link_to "Place an order", "#selectModal", "data-toggle" => "modal", class: "btn btn-success" %>
 <% end %>
