--- a/app/assets/stylesheets/v2/application.css
+++ b/app/assets/stylesheets/v2/application.css
@@ -290,3 +290,11 @@ span.expand {
     -moz-box-shadow: inset 1px 0 0 rgba(255, 255, 255, .8);
     box-shadow: inset 1px 0 0 rgba(255, 255, 255, .8);
 }
+
+#header-fixed {
+    position: fixed;
+    top: 87px;
+    display: none;
+    background-color: white;
+}
+
