--- a/app/views/admin/deposits/index.html.erb
+++ b/app/views/admin/deposits/index.html.erb
@@ -15,7 +15,7 @@
 
 </div>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-1">
   <thead>
   <tr>
     <th><%= model_class.human_attribute_name(:collector) %></th>
@@ -53,5 +53,7 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
+
 
 <%= paginate @deposits %>
