--- a/app/views/admin/lot_numbers/index.html.erb
+++ b/app/views/admin/lot_numbers/index.html.erb
@@ -11,7 +11,7 @@
       <%= f.submit "Search", class: "btn btn-small" %>
   <% end %>
 </div>
-<table class="table table-striped">
+<table class="table table-striped" id="table-1">
   <thead>
   <tr>
     <th><%= sort_link @search, :number %></th>
@@ -45,6 +45,7 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
 
 <%= paginate @lot_numbers %>
 
