--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -8,7 +8,7 @@
   <%= render partial: "shared/advanced_search", locals: {name: "state_or_number_or_customer_full_name_cont", html_options: {placeholder: "Search..."}} %>
 </div>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-1">
   <thead>
     <tr>
       <th><%= model_class.human_attribute_name(:state) %></th>
@@ -40,3 +40,6 @@
     <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
+<%= paginate @orders %>
+
