--- a/app/views/admin/people/index.html.erb
+++ b/app/views/admin/people/index.html.erb
@@ -7,7 +7,7 @@
               :class => 'btn btn-primary pull-right' %>
   <%= render partial: "shared/advanced_search", locals: {name: "full_name_cont", html_options: {placeholder: "Search..."}} %>
 </div>
-<table class="table table-striped">
+<table class="table table-striped" id="table-1">
   <thead>
   <tr>
     <th><%= model_class.human_attribute_name(:first_name) %></th>
@@ -45,4 +45,7 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
+<%= paginate @people %>
+
 
