--- a/app/views/admin/plants/index.html.erb
+++ b/app/views/admin/plants/index.html.erb
@@ -8,7 +8,7 @@
   <%= render partial: "shared/advanced_search", locals: {name: "species_or_common_name_cont", html_options: {placeholder: "Species or Common Name Conts"}} %>
 </div>
 
-<table class="table table-striped">
+<table class="table table-striped" id="table-1">
   <thead>
   <tr>
     <th><%= sort_link @search, :species %></th>
@@ -42,5 +42,7 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
+
 
 <%= paginate @plants %>
