--- a/app/views/home/catalogue_general.html.erb
+++ b/app/views/home/catalogue_general.html.erb
@@ -5,9 +5,8 @@
 <%= render partial: "shared/selection_modal" %>
 <!-- /Row-->
 
-<%= render partial: "table_header" %>
 
-<table class="table table-bordered">
+<table class="table table-bordered" id="table-1">
   <thead>
   <tr class="bold-black">
     <th>SEED CATALOGUE</th>
@@ -49,4 +48,5 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
 
