adds missing header

--- a/app/views/home/catalogue_general.html.erb
+++ b/app/views/home/catalogue_general.html.erb
@@ -5,6 +5,7 @@
 <%= render partial: "shared/selection_modal" %>
 <!-- /Row-->
 
+<%= render partial: "table_header" %>
 
 <table class="table table-bordered" id="table-1">
   <thead>
