--- a/app/views/home/catalogue_nursery.html.erb
+++ b/app/views/home/catalogue_nursery.html.erb
@@ -7,7 +7,7 @@
 
 <%= render partial: "table_header" %>
 
-<table class="table table-bordered">
+<table class="table table-bordered" id="table-1">
   <thead>
   <tr class="bold-black">
     <th>SEED CATALOGUE</th>
@@ -49,4 +49,6 @@
   <% end %>
   </tbody>
 </table>
+<table class="table table-striped col-md-12" id="header-fixed"></table>
+
 
