--- a/app/views/home/catalogue_spa.html.erb
+++ b/app/views/home/catalogue_spa.html.erb
@@ -8,7 +8,7 @@
 
 <%= render partial: "table_header" %>
 
-<table class="table table-bordered">
+<table class="table table-bordered" id="table-1">
   <thead>
   <tr class="bold-black">
     <th colspan="2">SEED CATALOGUE</th>
@@ -50,3 +50,4 @@
   </tbody>
 </table>
 
+<table class="table table-striped col-md-12" id="header-fixed"></table>
