--- a/app/views/order_mailer/new_order_to_admin.text.erb
+++ b/app/views/order_mailer/new_order_to_admin.text.erb
@@ -8,7 +8,7 @@ DETAILS
 
 <% @order.line_items.each do |li| %>
     ================================================================
-    Plant: <%= "#{li.plan.common_name} #{li.plant.species}" %>
+    Plant: <%= "#{li.plant.common_name} #{li.plant.species}" %>
     Quantity: <%= li.qty %>grams
     Price: <%= number_to_currency li.price, precision: 2 %>
     ================================================================
