--- a/app/views/order_mailer/notify_processed.text.erb
+++ b/app/views/order_mailer/notify_processed.text.erb
@@ -6,11 +6,12 @@ Your order with number <%= @order.number %> is modified by Seedbank staff.
 
 DETAILS
 
+<%= customer_order_url(@order.number) %>
+
 <% @order.line_items.each do |li| %>
     ================================================================
     Plant: <%= "#{li.plant.common_name} #{li.plant.species}" %>
     Quantity: <%= li.qty %>grams
     Price: <%= number_to_currency li.price, precision: 2 %>
     ================================================================
-
 <% end %>
